--- a/Desktop/tailorno1/public/header.html
+++ b/Desktop/tailorno1/public/header.html
@@ -226,9 +226,9 @@ window.onclick = function(event) {
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 
   const firebaseConfig = {
-apiKey: "AIzaSyChvaLvojD3aX0Zj7yKqhfrbVqe_ok6s5k",
-authDomain: "tailor-web-32005.firebaseapp.com",
-projectId: "login-99663",
+apiKey: "",
+authDomain: "-32005.firebaseapp.com",
+projectId: "login",
 storageBucket: "tailor-web-32005.firebasestorage.app",
 messagingSenderId: "1062649633192",
 appId: "1:1062649633192:web:0ac103c79c04da15ce259d",
