--- a/Desktop/tailorno1/public/tshirt/tshirtdetail.html
+++ b/Desktop/tailorno1/public/tshirt/tshirtdetail.html
@@ -443,10 +443,10 @@
    }
    )
      
-     const firebaseConfig = { apiKey: "AIzaSyCh7O9uKAbPPZTIsczBuZuGcuoQLv9-9yY",
-     authDomain: "tailorno1-66aa1.firebaseapp.com",
-     databaseURL: "https://tailorno1-66aa1-default-rtdb.firebaseio.com",
-     projectId: "tailorno1-66aa1",
+     const firebaseConfig = { apiKey: "",
+     authDomain: "ti",
+     databaseURL: "seio.com",
+     projectId: "ta1",
      storageBucket: "tailorno1-66aa1.appspot.com",
      messagingSenderId: "61332335324",
      appId: "1:61332335324:web:25c289cc1a5ceb94d86219",
