--- a/dat/public/signip.html
+++ b/dat/public/signip.html
@@ -34,9 +34,9 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyDORwWEfG5kFFcVNnKo3jNEC_et4jv_MIE",
-      authDomain: "love-calculator-2b5fa.firebaseapp.com",
-      projectId: "love-calculator-2b5fa",
+      apiKey: "v_MIE",
+      authDomain: "love-ccom",
+      projectId: "lovea",
       storageBucket: "love-calculator-2b5fa.appspot.com",
       messagingSenderId: "1031217234754",
       appId: "1:1031217234754:web:882a9ee2f456c384547edb"
